tests/baselines/reference/FunctionPropertyAssignments5_es6.errors.txt
tests/cases/conformance/es6/functionPropertyAssignments/FunctionPropertyAssignments5_es6.ts(1,13): error TS2552: Cannot find name 'foo'. Did you mean 'v'?


==== tests/cases/conformance/es6/functionPropertyAssignments/FunctionPropertyAssignments5_es6.ts (1 errors) ====
    var v = { *[foo()]() { } }
                ~~~
!!! error TS2552: Cannot find name 'foo'. Did you mean 'v'?